--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 <h3>Acompañamientos</h3>
                 <div class="menu-item"><span>TUÉTANOS A LA BRASA</span> <span>$290</span></div>
                 <div class="menu-item"><span>PAPAS AL ROMERO</span> <span>$160</span></div>
-                <div class="menu-item) "><span>ENSALADA CÉSAR AHUMADA</span> <span>$210</span></div>
+                <div class="menu-item"><span>ENSALADA CÉSAR AHUMADA</span> <span>$210</span></div>
             </div>
         </div>
     </section>
